<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/refresh"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/refresh_settings"/>
    
    <item
        android:id="@+id/filter_settings"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/filter_settings"/>
    
    <item 
        android:id="@+id/delete_settings"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/delete_settings"/>
    
    <item
        android:id="@+id/add_setting" 
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:icon="@drawable/plus_orange"
        android:title="@string/add_settings"
        />

</menu>
