<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/bg_menus"
    android:screenOrientation="portrait">
   
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_below="@+id/imageView"
        android:layout_above="@+id/meeting"
        android:scrollbars="vertical"
        android:lineSpacingExtra="2dp"
        android:isScrollContainer="true"
        android:inputType="textMultiLine"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/desPlace"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/b_goto"
        android:layout_alignBottom="@+id/b_goto"
        android:layout_toRightOf="@+id/b_goto"
        android:layout_marginLeft="20dp"
        android:text="@string/b_meeting" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/meeting"
        android:layout_toRightOf="@+id/meeting"
        android:layout_marginLeft="20dp"
        android:text="@string/b_delete" />

    <Button
        android:id="@+id/b_goto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/b_goto" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/name"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/img_descrp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/imageView"
        android:maxLines="2"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_below="@+id/name"
        android:layout_marginLeft="5dp"
        android:text="@string/tags"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/type"
        android:layout_below="@+id/type"
        android:layout_toLeftOf="@+id/imageView"
        android:maxLines="2"
        android:text="@string/address" />
    
</RelativeLayout>
