<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_menus" 
    android:screenOrientation="portrait">
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingBottom="80dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:paddingTop="30dp"
            android:paddingBottom="20dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="200dp"
                    android:hint="@string/title"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLines="2" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="130dp"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/tags" />
                
                <EditText
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="200dp"
                    android:hint="@string/address"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLines="2" />
                
            </LinearLayout>

            <ImageView
                android:id="@+id/ImgPic"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="20dp"
                android:clickable="true"
                android:contentDescription="@string/img_descrp"
                android:onClick="imageClick"
                android:src="@drawable/insertpicture" />
            
        </LinearLayout>

        <EditText
            android:id="@+id/description"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/descrp"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences|textMultiLine" 
            android:scrollbars="vertical"/>
        
        
    </LinearLayout>
    
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/done" /> 
    

</RelativeLayout>
