<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_menus" 
    android:screenOrientation="portrait">
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingBottom="80dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:paddingTop="30dp"
            android:paddingBottom="20dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLines="2" />

             
                
                <EditText
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLines="2" />
                
                 <EditText
                     android:id="@+id/radio"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
            		android:imeOptions="actionDone"
                     android:hint="@string/distancia" 
                     android:inputType="numberSigned"/>
                
            </LinearLayout>

           
            
        </LinearLayout>
        
    </LinearLayout>

     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="32dp"
         android:layout_toLeftOf="@+id/button2"
         android:text="@string/done" />

     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/button"
         android:layout_alignBottom="@+id/button"
         android:layout_alignParentRight="true"
         android:layout_marginRight="84dp"
         android:text="@string/stop" />
     
</RelativeLayout>
